--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,9 +12,14 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3333/jeesite?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=jaken123
+
+
+jdbc.buss.url=jdbc:mysql://localhost:3335/oasysdb_1207?useUnicode=true&characterEncoding=utf-8
+jdbc.buss.username=root
+jdbc.buss.password=root
 
 #mssql database settings
 #jdbc.type=mssql
